--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,138 @@
     	height: auto;
     	width: 20%;
 	}
+	.mnu{
+		margin-top: 24px;
+	}
+	.mnu > a{
+	    margin: 11px;
+	    color: #696969;
+
+	    padding: 10px;
+	    
+	    text-align: center;
+	}
+	.bg{
+		background: url(./imgs/e7m.png);
+	    
+	    background-position-y: -100px;
+	    background-size: 100%;
+	    width: 100%;
+	    height: 100%;
+	    z-index: 0;
+	    position: absolute;
+	    opacity: 0.1
+	}
+	.nav_moving{
+		position: fixed;
+	    background: #fff;
+	    width: 100%;
+	    z-index: 9999;
+	    height: 100px;
+	}
+
+	.try_btn{
+		background: #0fbd54;
+		color:#fff;
+		float: left;
+		transition: 0.4s all ease;
+		font-size: 16px;
+		padding: 13px;
+	    float: right;
+	    margin-right: 39px;
+	    margin-top: 15px;
+
+	}
+
+	.try_btn:hover{
+		background: #148e44;
+		color:#fff;
+	}
+
+	.lic_btn{
+		background: #0592e4;
+		color:#fff;
+		float: left;
+		margin-right: 20px;
+		transition: 0.4s all ease;
+		font-size: 16px;
+		padding: 13px;
+	    float: right;
+	    margin-top: 15px;
+	}
+
+	.lic_btn:hover{
+		color:#fff;
+		background: #136696;
+	}
+.sec{
+background: #fbfbfb;
+margin: 2px;
+margin-top: 6px;
+margin-bottom:6px;
+border-radius: 5px;
+box-shadow: 0px 0px 3px #bbb;
+}
+.sec > .title{
+font-size: 24px;
+color: #666;
+padding: 10px;
+text-align: center;
+font-weight: bold;
+}
+.sec > .icon{
+    font-size: 30px;
+    text-align: center;
+    border: 1px solid #aaa;
+    width: 45px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    border-radius: 100%;
+
+}
+.sec > .mon{
+text-align: center;
+border: 1px solid #eee;
+width: 58%;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 10px;
+border-radius: 8px;
+background: #fbfbfb;
+height: 30px;
+padding-top: 5px;
+
+
+}
+.sec > .dits{
+padding:20px;
+}
+.sec > .dits > ul > li{
+
+list-style-type: none;
+color: #fff;
+padding: 12px;
+border-radius: 20px;
+margin: 4px;
+font-size: 12px;
+list-style-type: none;
+
+}
+.wrn {
+background: #675e5e;
+color:#bbb;
+}
+.wrn-1{
+background:#9e6c57
+}
+.wrn-2{
+background:#cc6136
+}			
+.good{
+background: #ef642c;
+}
+ul{
+padding: 0px;
+}
