--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@
 	    text-align: center;
 	}
 	.bg{
-		background: url(./imgs/e7m.png);
+		background: url(../imgs/e7m.png);
 	    
 	    background-position-y: -100px;
 	    background-size: 100%;
