--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 		padding: 0px;
 		margin: 0px;
 		/*font-family: 'Scheherazade', serif;*/
-		font-family: sans-serif;
+		font-family: "Segoe UI", Tahoma, sans-serif;
 		color: #444;
 	}
 	.Loader{
