--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 	.Loader{
 		width: 100%;
 		height:100vh;
-		background: #fff;
+		background: #222;
 		position: fixed;
 		z-index: 999999;
 	}
@@ -32,12 +32,13 @@
 	  left:46%;
 	  top:46%;
 	  z-index: 9999999;
+	  background: #111
 	}
 
 	.sk-cube-grid .sk-cube {
 	  width: 33%;
 	  height: 33%;
-	  background-color: #e63b02;
+	  background-color: #333;
 	  float: left;
 	  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
 	          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
